Move the orbit to prevent overflow while decreasing screen size

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,7 +19,7 @@
 .orbit1 {
     position: absolute;
     top: 248px;
-    left: 35%;
+    right: 48%;
     z-index: -100;
 }
 
